# ReverDNS

./: .editorconfig  .gitignore  .reverdns.toml.example  BUG_FIXES.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  Dockerfile  FILE_LISTING.md  IMPLEMENTATION_COMPLETE.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  clippy.toml  docker-compose.yml  rustfmt.toml
.github/workflows/: ci.yml
benches/: dns_lookup_benchmark.rs
src/: error.rs  lib.rs  logger.rs  main.rs
src/cli/: args.rs  mod.rs
src/dns/: mod.rs  resolver.rs
src/output/: csv.rs  json.rs  mod.rs
tests/: integration_tests.rs
