[package]
name = "reverdns"
version = "2.0.0"
edition = "2021"
authors = ["ReverDNS Contributors"]
description = "High-performance reverse DNS (PTR) lookup tool for bulk IP lists with JSON/CSV export, resolver rotation, rate limiting, and DNS-over-HTTPS support"
license = "MIT"
repository = "https://github.com/ismailtasdelen/ReverDNS"
readme = "README.md"
keywords = ["dns", "reverse-dns", "ptr", "cli", "networking"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
trust-dns-resolver = { version = "0.23", features = ["dns-over-https-rustls"] }
trust-dns-proto = "0.23"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
futures = "0.3"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
hyper = "0.14"
warp = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
regex = "1.10"
lazy_static = "1.4"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
tempfile = "3.8"
criterion = "0.5"

[[bench]]
name = "dns_lookup_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[lib]
name = "reverdns"
path = "src/lib.rs"

[[bin]]
name = "reverdns"
path = "src/main.rs"
